# bluecross

./: .gitignore  Cargo.toml  README.md  bluecross.json  main.py  pyproject.toml
.github/workflows/: build.yml  release.yml
bluecross/: __init__.py  client.py  clipboard.py  config.py  ctl.py  debug_mouse.py  input_capture.py  input_inject.py  logging_config.py  protocol.py  screen.py  server.py
packaging/debian/: changelog  control  copyright  postinst  postrm  rules
packaging/rpm/: bluecross.spec
packaging/udev/: 99-bluecross-uinput.rules
src/: client.rs  clipboard.rs  config.rs  daemon.rs  input_capture.rs  input_inject.rs  main.rs  protocol.rs  screen.rs  secure.rs  server.rs
systemd/: README.md  bluecross-client.service  bluecross-server.service
